# Emu6502

./: .gitignore  CMakeLists.txt  Makefile  common.hpp  controlunit.cpp  cpu.cpp  cpu.hpp  instructions.cpp  instructions.hpp  lda.md  main.cpp  memory.hpp  registers.hpp
Docs/: Registros Internos.md  adc.md  and.md  asl.md  bcc.md  bcs.md  beq.md  bit.md  bmi.md  bne.md  bpl.md  brk.md  bvc.md  bvs.md  clc.md  cld.md  cli.md  cmp.md  cpx.md  cpy.md  dec.md  dex.md  dey.md  eor.md  inc.md  inx.md  iny.md  jmp.md  jsr.md  lda.md  ldx.md  ldy.md  lsr.md  nop.md  ora.md  pha.md  php.md  pla.md  plp.md  reset.md  (+15 more)
cpu.dSYM/Contents/Resources/Relocations/x86_64/: cpu.yml
include/: clock.hpp  common.hpp  cpu.hpp  exceptions.hpp  instructions.hpp  memory.hpp  registers.hpp
src/: computer.cpp  cpu.cpp  instructions.cpp
test_runner.dSYM/Contents/Resources/DWARF/: test_runner
tests/: test_cpu.cpp  test_instructions.cpp  test_registers.cpp
